--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://getbootstrap.com/docs/5.2/assets/css/docs.css"
       rel="stylesheet"
     />
-    <title>Bootstrap qqExample</title>
+    <title>Bootstrap qqaaExample</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
